Fixed date alignment on posts

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -116,7 +116,6 @@ p {
 .date {
     padding-top: 3px;
     padding-bottom: 3px;
-    text-align: center;
     color: #4E5053;
     font-size: 12px;
     font-weight: 700;
